Changing logging level and fixing dependencies