@@ -32,7 +32,7 @@ public class MachinesFailedService {
 
     public void registerMetrics() {
         var machinesFailedData = openSearchService.getMachinesFailedData();
-        log.info("machinesFailedData size {}", machinesFailedData.size());
+        log.debug("machinesFailedData size {}", machinesFailedData.size());
 
         if (machinesFailedData.isEmpty()) {
             return;
@@ -41,14 +41,14 @@ public class MachinesFailedService {
         var withdrawalIds = machinesFailedData.stream()
                 .filter(w -> w.getMachineNs().contains(WITHDRAWAL))
                 .map(MachinesFailedData::getMachineId)
-                //TODO удалить ограничение после отладки
-                .limit(10)
-                .toList();
-        //TODO удалить логи после отладки
-        log.info("withdrawalIds {}", withdrawalIds);
+                .collect(Collectors.collectingAndThen(
+                        Collectors.toList(),
+                        list -> log.isDebugEnabled()
+                                ? list.stream().limit(10).collect(Collectors.toList()) : list
+                ));
+        log.debug("withdrawalIds {}", withdrawalIds);
         var withdrawalEntities = withdrawalRepository.getWithdrawalsMetrics(withdrawalIds);
-        //TODO удалить логи после отладки
-        log.info("withdrawalEntities {}", withdrawalEntities);
+        log.debug("withdrawalEntities {}", withdrawalEntities);
 
         var withdrawalAggregatedByMachineId = withdrawalEntities.stream()
                 .collect(Collectors.toMap(WithdrawalsAggregatedMetricDto::getWithdrawalId,
@@ -71,14 +71,14 @@ public class MachinesFailedService {
         var invoiceIds = machinesFailedData.stream()
                 .filter(i -> i.getMachineNs().contains(INVOICE))
                 .map(MachinesFailedData::getMachineId)
-                //TODO удалить ограничение после отладки
-                .limit(10)
-                .toList();
-        //TODO удалить логи после отладки
-        log.info("invoiceIds {}", invoiceIds);
+                .collect(Collectors.collectingAndThen(
+                        Collectors.toList(),
+                        list -> log.isDebugEnabled()
+                                ? list.stream().limit(10).collect(Collectors.toList()) : list
+                ));
+        log.debug("invoiceIds {}", invoiceIds);
         var invoiceEntities = paymentRepository.getPaymentsStatusMetrics(invoiceIds);
-        //TODO удалить логи после отладки
-        log.info("invoiceEntities {}", invoiceEntities);
+        log.debug("invoiceEntities {}", invoiceEntities);
 
         var invoiceAggregatedByMachineId = invoiceEntities.stream()
                 .collect(Collectors.toMap(PaymentsAggregatedMetricDto::getInvoiceId,
